--- a/index.css
+++ b/index.css
@@ -2,8 +2,8 @@ html, body {
     margin: 0;
     padding: 0;
     
-    font-family: 'Rubik', sans-serif;
-    background-color: #EEF0F4;
+    font-family: 'Space Grotesk', sans-serif;
+    background-color: #F8F8F8;
 
     user-select: none;
    
@@ -17,11 +17,11 @@ input {
 
 button {
     color: #FDFDFD;
-    background-color: #AC485A; 
+    background-color: #EF5452; 
 }
 
 button:hover {
-    background-color: #432000;
+    background-color: #E52D2D;
 }
 
 li:hover {
@@ -33,7 +33,7 @@ input, button {
     border-radius: 6px;
     border: 0;
     height: 60px;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
     font-size: 20px;
 }
 
@@ -74,6 +74,8 @@ li {
     font-size: 20px;
 }
 
-.message {
-    text-align: center;
+p {
+    margin: auto;
+    opacity: 50%;
 }
+
