--- a/index.css
+++ b/index.css
@@ -42,9 +42,9 @@ input::placeholder {
 }
 
 img {
-    width: 200px;
+    width: 300px;
     margin: 0 auto;
-
+    margin-top: 30px;
 }
 
 .container {
